[package]
name = "rache"
version = "0.1.0"
edition = "2021"

[features]
default = ["level_based"]
size_tiered = []
level_based = []

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
clap = "4.5.23"
structopt = "0.3.26"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
rmp-serde ={ version = "1" }
log = "0.4.14"
env_logger = "0.11"

[dev-dependencies]
predicates = "3"
assert_cmd = "2.0.16"